refactoring and fixes

--- a/todo.txt
+++ b/todo.txt
@@ -12,7 +12,7 @@ Maybe Ideas:
 4. https://medium.com/faun/continuous-integration-of-java-project-with-github-actions-7a8a0e8246ef
 
 Checklist:
-1. handle path parameters in url. e.g.: api/example/resource/john
+1. handle path parameters in url. e.g.: api/example/resource/{john} - tomorrows priority
 2. handle query parameters in url. e.g. api/example?user=john
     choose b/w options:
 
@@ -40,6 +40,7 @@ Checklist:
 6. handle multithreading properly and other resources
 7. code refactoring and documentation
 8. handle parsing path in controller. if path is api/example/response and controller is api/example then we must check for substring
+9. handle sending and receiving all types of data in response and body.
 
 Points:
 
